Descriptions are updated. Figures of main result are updated.

--- a/biblio.bib
+++ b/biblio.bib
@@ -2,12 +2,66 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Yuka Fujii at 2015-03-30 18:39:19 +0900 
+%% Created for Yuka Fujii at 2015-04-16 14:44:47 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{noyola2014,
+	Abstract = {In the Jupiter-Io system, the moon's motion produces currents along the field lines that connect it to Jupiter's polar regions. The currents generate and modulate radio emissions along their paths via the electron-cyclotron maser instability. Based on this process, we suggest that such modulation of planetary radio emissions may reveal the presence of exomoons around giant planets in exoplanetary systems. A model explaining the modulation mechanism in the Jupiter-Io system is extrapolated and used to define criteria for exomoon detectability. A cautiously optimistic scenario of the possible detection of such exomoons around Epsilon Eridani b and Gliese 876 b is provided.},
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...791...25N},
+	Archiveprefix = {arXiv},
+	Author = {{Noyola}, J.~P. and {Satyal}, S. and {Musielak}, Z.~E.},
+	Date-Added = {2015-04-16 05:44:31 +0000},
+	Date-Modified = {2015-04-16 05:44:46 +0000},
+	Doi = {10.1088/0004-637X/791/1/25},
+	Eid = {25},
+	Eprint = {1308.4184},
+	Journal = {\apj},
+	Keywords = {methods: analytical, planets and satellites: detection, planets and satellites: dynamical evolution and stability},
+	Month = aug,
+	Pages = {25},
+	Primaryclass = {astro-ph.EP},
+	Title = {{Detection of Exomoons through Observation of Radio Emissions}},
+	Volume = 791,
+	Year = 2014,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-637X/791/1/25}}
+
+@article{zarka2001,
+	Abstract = {At least six intense nonthermal planetary radio emissions are known in our solar system: the auroral radio emissions from the Earth, Jupiter, Saturn, Uranus and Neptune, and the radio bursts from the Io-Jupiter flux tube. The former are thought to be driven by the solar wind flow pressure or energy flux on the magnetospheric cross-section, while the latter is a consequence of the Io-Jupiter electrodynamic interaction. Although in the solar wind, the flow ram pressure largely dominates the magnetic one, we suggest that the incident magnetic energy flux is the driving factor for all these six radio emissions, and that it can be estimated in the same way in all cases. Consequences for the possible radio emission from extrasolar planets are examined. `Hot Jupiters', if they are magnetized, might possess a radio emission several orders of magnitude stronger than the Jovian one, detectable with large ground-based low-frequency arrays. On the other hand, `giants' analogous to the Io-Jupiter interaction in the form of a pair star/hot-Jupiter are unlikely to produce intense radio emissions, unless the star is very strongly magnetized.},
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2001Ap%26SS.277..293Z},
+	Author = {{Zarka}, P. and {Treumann}, R.~A. and {Ryabov}, B.~P. and {Ryabov}, V.~B.},
+	Date-Added = {2015-04-16 05:42:51 +0000},
+	Date-Modified = {2015-04-16 05:43:08 +0000},
+	Doi = {10.1023/A:1012221527425},
+	Journal = {\apss},
+	Month = jun,
+	Pages = {293-300},
+	Title = {{Magnetically-Driven Planetary Radio Emissions and Application to Extrasolar Planets}},
+	Volume = 277,
+	Year = 2001,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1023/A:1012221527425}}
+
+@article{desch1984,
+	Abstract = {Determinations by spacecraft of the low-frequency radio spectra and radiation beam geometry of the magnetospheres of earth, Jupiter, and Saturn now permit a reliable assessment of the overall efficiency of the solar wind in stimulating intense, nonthermal radio bursts from these magnetospheres. It is found that earlier estimates of how magnetospheric radio output scales with the solar wind energy input must be greatly revised, with the result that, while the efficiency is much lower than previously thought, it is remarkably uniform from planet to planet. A 'radimetric Bode's law' is formulated from which a planet's magnetic moment can be estimated from its radio emission output. This law is applied to estimate the low-frequency radio power likely to be measured for Uranus by Voyager 2. It is shown how measurements of Uranus's radio flux can be used to estimate the planetary magnetic moment and solar wind stand-off distance before the in situ measurements.},
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1984Natur.310..755D},
+	Author = {{Desch}, M.~D. and {Kaiser}, M.~L.},
+	Date-Added = {2015-04-16 05:40:28 +0000},
+	Date-Modified = {2015-04-16 05:40:49 +0000},
+	Doi = {10.1038/310755a0},
+	Journal = {\nat},
+	Keywords = {Magnetic Moments, Planetary Magnetic Fields, Planetary Radiation, Radio Emission, Solar Planetary Interactions, Uranus (Planet), Nonthermal Radiation, Planetary Magnetospheres, Plasma Interactions, Radiant Flux Density, Radio Bursts, Solar Wind},
+	Month = aug,
+	Pages = {755-757},
+	Title = {{Predictions for Uranus from a radiometric Bode's law}},
+	Volume = 310,
+	Year = 1984,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1038/310755a0}}
 
 @article{judge1991,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
